day-10/ingress-6-eks-canary-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "90"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - matheus-backend-dev.tech
    secretName: giropops-container-senhas-matheus
  rules:
  - host: matheus-backend-dev.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
